# react-native-sherpa-onnx-stt

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  MODEL_SETUP.md  README.md  ROADMAP.md  SherpaOnnxStt.podspec  lefthook.yml  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: android.yml  build-sherpa-onnx-framework.yml  ios.yml  release.yml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/jni/: sherpa-onnx-stt-jni.cpp  sherpa-onnx-wrapper.cpp  sherpa-onnx-wrapper.h
android/src/main/java/com/sherpaonnxstt/: SherpaOnnxSttModule.kt
example/ios/: Podfile
example/src/: App.tsx  audioConfig.ts  modelConfig.ts
ios/: SherpaOnnxStt.mm  SherpaOnnxStt.xcconfig  sherpa-onnx-wrapper.h  sherpa-onnx-wrapper.mm
ios/Frameworks/sherpa_onnx.xcframework/: VERSION.txt
scripts/: copy-headers.js
src/: NativeSherpaOnnxStt.ts  index.tsx  types.ts
